--- a/src/components/Notifications/Notifications.module.css
+++ b/src/components/Notifications/Notifications.module.css
@@ -1,3 +1,9 @@
+:root {
+    --warning-color: #FD9B00;
+    --success-color: #14B985;
+    --error-color: #FF3F54;
+}
+
 .button {
     box-shadow: 0px 3px 18px rgba(33, 33, 33, 0.08);
     border-radius: 8px;
@@ -7,6 +13,25 @@
     display: flex;
     align-items: center;
     transition: all 0.3s ease 0s;
+}
+.button:not(:last-child) {
+    margin-right: 44px;
+}
+@media screen and (max-width: 778px) {
+    .button:not(:last-child) {
+        margin-right: 0px;
+        margin-bottom: 24px;
+    }
+}
+
+.succes {
+    background-color: var(--success-color);
+}
+.warning {
+    background-color: var(--warning-color);
+}
+.error {
+    background-color: var(--error-color);
 }
 
 .button:hover .icon {
